kube/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway-petclinic
  namespace: spring-petclinic
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-petclinic
spec:
  hosts:
  - "petclinic.com"
  gateways:
  - api-gateway-petclinic
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: api-gateway.lab.***REMOVED***
        port:
          number: 80
